<resources>
    <string name="app_name">NUMAD25Sp_SenayTilahun</string>
    <string name="about_me">About Me</string>
    <string name="hello_world">Hello World!!</string>

    <!-- New string for the toast message -->
    <string name="name">Senay Tilahun</string>
    <string name="email">tilahun.s@northeastern.edu</string>
    <string name="about_me_toast_message">Name: %1$s\nEmail: %2$s</string>
    <string name="appwidget_text">First App Widget</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="calc">CALC</string>
    <string name="quic_calc">Quic Calc</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="minus">-</string>
    <string name="remove">x</string>
    <string name="evaluate">=</string>
    <string name="CALC">CALC</string>
    <string name="error">Error</string>
    <string name="about_me_information">About Me Information</string>
    <string name="contacts_collector">Contacts Collector</string>
    <string name="contacts_collector_page">Contacts Collector Page</string>
    <string name="add_contact">Add Contact</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="find_primes">Find Primes</string>


</resources>