<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuicCalcActivity">

    <TextView
        android:id="@+id/text_calc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calc"
        android:textSize="32sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_1"
        android:padding="16dp"/>

    <Button
        android:id="@+id/button_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_2"
        app:layout_constraintTop_toBottomOf="@id/text_calc"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/button_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        app:layout_constraintStart_toEndOf="@id/button_1"
        app:layout_constraintEnd_toStartOf="@id/button_3"
        app:layout_constraintTop_toBottomOf="@id/text_calc"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/button_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        app:layout_constraintStart_toEndOf="@id/button_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_calc"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/button_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_5"
        app:layout_constraintTop_toBottomOf="@id/button_1"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/button_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        app:layout_constraintStart_toEndOf="@id/button_4"
        app:layout_constraintEnd_toStartOf="@id/button_6"
        app:layout_constraintTop_toBottomOf="@id/button_2"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/button_6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_6"
        app:layout_constraintStart_toEndOf="@id/button_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_3"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/button_7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_8"
        app:layout_constraintTop_toBottomOf="@id/button_4"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/button_8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_8"
        app:layout_constraintStart_toEndOf="@id/button_7"
        app:layout_constraintEnd_toStartOf="@id/button_9"
        app:layout_constraintTop_toBottomOf="@id/button_5"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/button_9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_9"
        app:layout_constraintStart_toEndOf="@id/button_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_6"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/button_plus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_0"
        app:layout_constraintTop_toBottomOf="@id/button_7"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/button_0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        app:layout_constraintStart_toEndOf="@id/button_plus"
        app:layout_constraintEnd_toStartOf="@id/button_minus"
        app:layout_constraintTop_toBottomOf="@id/button_8"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/button_minus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        app:layout_constraintStart_toEndOf="@id/button_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_9"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/button_x"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/remove"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_equals"
        app:layout_constraintTop_toBottomOf="@id/button_plus"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/button_equals"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/evaluate"
        app:layout_constraintStart_toEndOf="@id/button_x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_minus"
        android:layout_margin="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>