<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="121dp"
        android:layout_height="24dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="148dp"
        android:text="@string/hello_world"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_about_me"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_about_me"
        android:layout_width="115dp"
        android:layout_height="63dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="304dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="267dp"
        android:onClick="openAboutMe"
        android:text="@string/about_me"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_quic_calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quic_calc"
        android:onClick="openQuicCalc"
        app:layout_constraintTop_toBottomOf="@+id/button_about_me"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/button_contacts_collector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacts_collector"
        android:onClick="openContactsCollector"
        app:layout_constraintTop_toBottomOf="@+id/button_quic_calc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/button_prime_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_primes"
        app:layout_constraintTop_toBottomOf="@id/button_quic_calc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="openPrimeSearch"/>



</androidx.constraintlayout.widget.ConstraintLayout>